# StoreDjango

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
accounts/templates/accounts/: login.html  profile.html  register.html
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: create_content_manager_group.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category.json  category_fixed.json  product.json  product_fixed.json
catalog/management/commands/: fill_products.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_options_product_owner_product_status.py  0004_alter_contact_address_alter_contact_working_hours.py
catalog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  post_detail.html
catalog/templates/catalog/: add_product.html  base.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
config/: settings.py  urls.py
mailing/: admin.py  apscheduler.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py
skystore/catalog/: views.py
skystore/config/: settings.py
static/css/: styles.css
static/js/: scripts.js
(+18 files in other folders)
